# buckaroo

./: .bumpversion.cfg  .coveragerc  .cursorrules  .eslintignore  .eslintrc.js  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  Untitled.ipynb  buckaroo.json  codecov.yml  crash_buckaroo.py  crash_buckaroo_simple.py  dcef.json  dcf.json  ddd_df_library.py  env_location.py  full_build.sh  iframe.html  index.html  index.json  install.json  introduction.ipynb  ipyreact-play.ipynb  jest.config.js  myproject.json  package-lock.json  package.json  project.json  pyproject.toml  pytest.ini  regular-summary-stats.ipynb  requirements-ui-test.txt  requirements.txt  simplified_df.pckl  tbump.toml  test_polars_widget.ipynb  (+5 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  my-bug_report.yml
.github/workflows/: build.yml  ci.yml  deploy-ghpage.yml  publish-storybook.yml  pw-integration.yml
assets/: ChartCell-CdGzSEf4.js  ChartCell-lxLhA7NV.js  ChartCell.stories-CtROqHDl.js  ChartCell.stories-eSMJBJwx.js  Color-YHDXOIA2-4GyBXW50.js  Color-YHDXOIA2-BX5Jnqa2.js  Color-YHDXOIA2-CRNhwlNb.js  Color-YHDXOIA2-CVCu04jY.js  Color-YHDXOIA2-CzQCGDo8.js  Color-YHDXOIA2-DMMsPzee.js  Color-YHDXOIA2-DvVk2NrL.js  Color-YHDXOIA2-DzjXPMep.js  Color-YHDXOIA2-KtxWnHkv.js  ColumnsEditor.stories-CtP6tNW1.js  ColumnsEditor.stories-DmVheisr.js  ColumnsEditor.stories-DtbZFc_J.js  ColumnsEditor.stories-b7Y0yIc9.js  ColumnsEditor.stories-t169iWjz.js  ColumnsEditor.stories-yl4sVFkg.js  Configure-BmpMArZ2.js  Configure-ByLWriq9.js  Configure-C7RUjXfv.js  Configure-CQ6d_VSS.js  Configure-D5PZ0P5S.js  Configure-DMGNgnhx.js  Configure-R2LIBDBL.js  Configure-WnjJweVQ.js  Configure-ZG3Lriuz.js  DFViewer.stories-Bjw-Ryph.js  DFViewer.stories-CY7_3nRP.js  DFViewer.stories-CkT9U4oQ.js  DFViewer.stories-ClWUrowv.js  DFViewer.stories-D9vbJgsH.js  DFViewer.stories-H_Dxrwq5.js  DFViewer.stories-JpbdMMkX.js  DFViewerDataHelper-BZ4H-prw.js  DFViewerDataHelper-l27HaZum.js  DFViewerInfinite-CH5RP8Q2.js  DFViewerInfinite-TzqCH2NM.js  DFViewerInfiniteRaw.stories-BDriySw-.js  (+123 more)
buckaroo/: BuckarooInfiniteWidget.tsx  BuckarooWidget.tsx  DFViewerWidget.tsx  __init__.py  _frontend.py  _version.py  all_transforms.py  analysis.py  analysis_management.py  auto_clean.py  buckaroo_widget.py  cleaning_commands.py  configure_utils.py  data_flow_traditional.py  dataflow.py  dataflow_traditional.py  ddd_library.py  df_util.py  down_sample.py  extension_utils.py  geopandas.py  geopandas_buckaroo.py  lazy_infinite_polars_widget.py  lisp_utils.py  lispy.py  marimo_utils.py  order_columns.py  pluggable_analysis.py  pluggable_analysis_framework.py  polars_buckaroo.py  read_utils.py  serialization_utils.py  serialization_utils_old.py  solara_buckaroo.py  styling_helpers.py  summary_stats.py  trait_utils.py  widgeet_play.py  widget_class_utils.py  widget_utils.py
buckaroo/auto_clean/: auto_clean.py  cleaning_commands.py  heuristic_lang.py
buckaroo/contrib/: buckaroo_pandera.py
buckaroo/customizations/: all_transforms.py  analysis.py  analysis_utils.py  datacompy_app.py  down_sample.py  heuristics.py  histogram.py  histograms.py  order_columns.py  pandas_cleaning_commands.py  pandas_commands.py  pd_autoclean_conf.py  pd_fracs.py  pl_autocleaning_conf.py  polars_analysis.py  polars_commands.py  styling.py
buckaroo/dataflow/: abc_dataflow.py  autocleaning.py  column_executor_dataflow.py  dataflow.py  dataflow_extras.py  dataflow_utils.py  styling_core.py  widget_extension_utils.py
buckaroo/file_cache/: __init__.py  base.py  batch_planning.py  bisector.py  bisector_diagram.py  cache_utils.py  joblib_timeout.py  mp_calibration.py  mp_column_executor_util.py  mp_timeout_decorator.py  multiprocessing_executor.py  paf_column_executor.py  simple_multiprocessing_timeout.py  sqlite_file_cache.py  sqlite_log.py  threaded_executor.py
buckaroo/flask_legacy/: views.py
buckaroo/jlisp/: configure_utils.py  lisp_utils.py  lispy.py
buckaroo/nbextension/: extension.js
buckaroo/noarch/: index.html
buckaroo/pluggable_analysis_framework/: analysis_management.py  col_analysis.py  polars_utils.py  (+4 more)
dcef/: _frontend.py  _version.py  all_transforms.py  configure_utils.py  dcef_widget.py  dcf_transform.py  index.html  lispy.py
dcf/: __init__.py  _frontend.py  _version.py  all_transforms.py  dcf_widget.py  example.py
docs/: .readthedocs.yaml  Makefile  README.md  environment.yml  examples_tsconfig.json  make.bat  requirements.txt  webpack.typescript.localdev.ts
example-notebooks/: Buckaroo-for-my-friends-less-tech  Buckaroo-for-my-friends-less-tech.ipynb  Buckaroo-for-my-friends.ipynb  Customizing-Buckaroo.ipynb  DFViewer.ipynb  Exception-Traits-demo.ipynb  Extending-pandas.ipynb  Extending.ipynb  Full-tour.ipynb  GeoPandas.ipynb  Histograms-demo.ipynb  Itables-testcases.ipynb  Pluggable-Analysis-Framework.ipynb  Solara-Buckaroo.ipynb  Styling-gallery.ipynb  polars-styling.ipynb  solara-gallery.py  styling-examples.ipynb  styling-gallery.ipynb  styling-howto.ipynb  testcases-fast.ipynb
examples/: App.tsx  app.css  example.css  index-iframe.html  index.html  index.tsx  introduction.ipynb  tsconfig.json
ipydatagrid/: __init__.py  paddy_widget.py
js/: comp1.tsx  dcefwidget.ts  dcfwidget.ts  extension.ts  index.ts  npm-styles.scss  paddywidget.ts  plugin.ts  version.ts  widget.css  widget.tsx  widget2.tsx
myproject/: __init__.py  _frontend.py  example.py
scripts/: clean_notebooks.sh  full_build.sh  hatch_build.py  marimo_wasm_output.sh  partial_build.sh  test_build_error.sh  test_playwright_jupyter.sh  test_playwright_storybook.sh  test_polars_widget_integration.sh
src/: .#widget.ts  SampleComponent.d.ts  extension.ts  index.d.ts  index.ts  plugin.ts  static.ts  version.ts  widget.ts  widgetUtils.d.ts
style/: dcf-npm.css  widget.css
tests/: analysis_management_test.py  analysis_test.py  auto_clean_test.py  auto_clean_tests.py  basic_widget_test.py  fixtures.py  lispy_test.py  lispy_tests.py  pluggable_analysis_framework_test.py  pluggable_analysis_framework_tests.py  serialization_utils_test.py
(+340 files in other folders)
