[build-system]
requires = [
    "hatchling",
    "jupyterlab~=3.0",
]
build-backend = "hatchling.build"

[project]
name = "buckaroo"
description = "Buckaroo - GUI Data wrangling for pandas"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Paddy Mullen" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
    "pandas",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipywidgets>=7.6.0,<9",
]
version = "0.3.17"

[project.license]
file = "LICENSE.txt"

[project.optional-dependencies]
test = [
    "nbval>=0.9",
    "pandas<=1.3.5",
    "pytest-cov>=3",
    "pytest>=6",
]

jupyterlab = ["jupyterlab>=3.6.0"]
notebook = ["notebook>=7.0.0"]


docs = [
    "sphinx>=1.5"
]

build = [
"twine",
"build"
]
    
[project.urls]
Homepage = "https://github.com/paddymul/buckaroo"

[tool.hatch.build]
artifacts = [
    "buckaroo/nbextension/index.*",
    "buckaroo/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"buckaroo/nbextension" = "share/jupyter/nbextensions/buckaroo"
"buckaroo/labextension" = "share/jupyter/labextensions/buckaroo"
"buckaroo.json" = "etc/jupyter/nbconfig/notebook.d/buckaroo.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    "examples",
    "tests",
    "ui-tests*",
    "widget-examples",
    "binder",
    "*.yaml",
    ".npmignore",
    ".eslint*",
    "__mocks__",
    "*.yml",
    "*.ini",
    ".pre*",
    "jest*",
]

[tool.hatch.build.hooks.jupyter-builder]

ensured-targets = [
    "buckaroo/nbextension/index.js",
    "buckaroo/labextension/package.json",
]
#"hatch-jupyter-builder>=0.8.1",
dependencies = ["hatch-jupyter-builder@file:///Users/paddy/code/hatch-jupyter-builder"]

build-function = "hatch_jupyter_builder.npm_builder"

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build"
npm = [
    "npm",
]

[tool.isort]
profile = "black"
known_first_party = [
    "buckaroo",
    "tests",
]
line_length = 80

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "80"

[tool.black]
line-length = 80
exclude = "/(\n    \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n)/\n"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]

[tool.tbump.version]
current = "0.2.2"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\""

[[tool.tbump.file]]
src = "buckaroo/_version.py"

[[tool.tbump.file]]
src = "package.json"
version_template = "\"version\": \"{major}.{minor}.{patch}{channel}{release}\""
